tests/programs/a1/local/invalid/long_literals.java
public class long_literals {
  protected long x = 2147483648L;
}